--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Condensed:wght@700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Condensed:wght@700&display=swap"
+      rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,12 +17,112 @@
     <header>
       <nav class="navbar">
         <div class="navbar__brand">
-            <img src="Assets/logo-removebg-preview.png" alt="logo" class="navbar__logo">
+          <img
+            src="Assets/logo-removebg-preview.png"
+            alt="logo"
+            class="brand__logo"
+          />
         </div>
         <div class="navber__nav__items">
-            <button class="nav__item">Order Food</button>
+          <button class="button__primary">Order Food</button>
         </div>
       </nav>
     </header>
+    <main class="container">
+      <!-- Hero Section -->
+      <section class="hero__container">
+        <div class="hero__image__container">
+          <img src="Assets/hero-img.png" alt="hero img" class="hero__image" />
+          <img
+            src="Assets/svg/heroShape.svg"
+            alt="hero shape image"
+            class="hero__image__shape"
+          />
+          <img
+            src="Assets/svg/herobgpattren.svg"
+            alt="hero shape image"
+            class="hero__image__pattern"
+          />
+        </div>
+        <div class="hero__description">
+          <h1 class="hero__text">
+            Order food from favourite restaurants near you.
+          </h1>
+          <button class="button__primary">Order Food</button>
+        </div>
+      </section>
+
+      <!-- Explore Menu -->
+      <section class="explore__menu__container">
+        <h1 class="explore__menu__text">Explore Our Menu</h1>
+        <div class="explore__menu__gradient__bg"></div>
+        <div class="explore__menu__lists">
+          <!-- Burger -->
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img src="Assets/burger.png" alt="burger" class="food__image" />
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Burger</h3>
+              <p>
+                Burger King, Mcdonalds, Burger Place
+                <span style="color: #d83a56">+3</span>
+              </p>
+            </div>
+          </div>
+          <!-- Pizza -->
+          <div class="food__card" id="pizza__card">
+            <div class="food__card__image__container">
+              <img src="Assets/pizza.png" alt="pizza" class="food__image" />
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Burger</h3>
+              <p>
+                Pizza Hut, Domino's Pizza <span style="color: #d83a56">+3</span>
+              </p>
+            </div>
+          </div>
+          <!-- Ice-Cream -->
+          <div class="food__card">
+            <div class="food__card__image__container">
+              <img
+                src="Assets/ice_cream.png"
+                alt="ice_cream"
+                class="food__image"
+              />
+            </div>
+            <div class="food__card__description">
+              <h3 class="food__title">Burger</h3>
+              <p>Baskin Robins, Ibaco <span style="color: #d83a56">+3</span></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="search__box">
+        <div class="search__box__update">
+          <div>
+            <input type="email" placeholder="email@email.com"  class="search__box__button"/>
+          </div>
+          <button class="button__primary">Get Updates</button>
+        </div>
+      </section>
+      <section class="quote__container">
+        <div class="quote__background"></div>
+        <h3 class="quote__text">
+          When a man's stomach is full it makes no difference whether he is rich
+          or poor.
+        </h3>
+      </section>
+    </main>
+    <footer>
+        <h1 class="footer__head">zomato</h1>
+          <ul>
+            <li>Pricing</li>
+            <li>Terms and condition</li>
+            <li>Partnership</li>
+            <li>Career</li>
+            <li>Contact</li>
+          </ul>
+    </footer>
   </body>
 </html>
